--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -174,6 +174,7 @@ ul {
 
 // Shared classes & styles.
 // --------------------------------------------------------
+.ovh {overflow: hidden;}
 .scrollable {
   height: 250px;
   overflow-y: scroll;
