--- a/src/vue-cal/default-theme.scss
+++ b/src/vue-cal/default-theme.scss
@@ -56,6 +56,14 @@
     background-color: color-mix(in srgb, var(--vuecal-secondary-color) 20%, transparent);
   }
 
+  .vuecal__view-button,
+  .vuecal__nav,
+  button.vuecal__title {
+    background: none;
+    border: none;
+    cursor: pointer;
+    color: inherit;
+  }
   .vuecal__view-button {
     text-transform: uppercase;
     font-size: 0.9em;
