--- a/src/vue-cal/index.scss
+++ b/src/vue-cal/index.scss
@@ -1,7 +1,7 @@
 .vuecal {
   --vuecal-grid-columns: 7; // Default value, overridden dynamically on view change.
   --vuecal-grid-rows: 6; // Default value, overridden dynamically on view change.
-  --vuecal-weekdays-bar-height: 1.6rem;
+  --vuecal-headings-bar-height: 1.6rem;
   --vuecal-time-cell-height: 50px; // Default value, can be overridden from props.
   // When there are too many day cells to fit in the view, setting a min cell width will help
   // visualizing and a horizontal scrollbar will be added.
@@ -11,10 +11,10 @@
   flex-direction: column;
   user-select: none;
 
-  &--date-picker {--vuecal-weekdays-bar-height: 1.3rem;}
-  &--has-schedules {--vuecal-weekdays-bar-height: 2.2rem;}
+  &--date-picker {--vuecal-headings-bar-height: 1.3rem;}
+  &--has-schedules {--vuecal-headings-bar-height: 2.2rem;}
   // Always use .vuecal__scrollable for view specific override for Vue transition to be smooth.
-  &--has-schedules .vuecal__scrollable--day-view {--vuecal-weekdays-bar-height: 1.2rem;}
+  &--has-schedules .vuecal__scrollable--day-view {--vuecal-headings-bar-height: 1.2rem;}
 
   &, *, :before, :after {box-sizing: border-box;}
 
@@ -46,13 +46,13 @@
     justify-content: center;
     overflow: hidden;
   }
-  &__schedule-headings {display: flex;}
+  &__schedules-headings {display: flex;}
   &__schedule--heading {
     font-size: 12px;
     align-items: center;
   }
   // Always use .vuecal__scrollable for view specific override for Vue transition to be smooth.
-  &--has-schedules .vuecal__scrollable--day-view &__schedule--heading {height: var(--vuecal-weekdays-bar-height);}
+  &--has-schedules .vuecal__scrollable--day-view &__schedule--heading {height: var(--vuecal-headings-bar-height);}
 }
 
 // Transitions.
