Disable cursor pointer on disabled controls.

--- a/src/vue-cal/default-theme.scss
+++ b/src/vue-cal/default-theme.scss
@@ -61,8 +61,9 @@
   button.vuecal__title {
     background: none;
     border: none;
-    cursor: pointer;
     color: inherit;
+
+    &:not([disabled]) {cursor: pointer;}
   }
   .vuecal__view-button {
     text-transform: uppercase;
