--- a/src/vue-cal/default-theme.scss
+++ b/src/vue-cal/default-theme.scss
@@ -162,9 +162,10 @@
   &.vuecal--light .vuecal__weekday-date {background-color: color-mix(in srgb, var(--vuecal-primary-color) 20%, transparent);}
   &.vuecal--light .vuecal__weekday--today .vuecal__weekday-date {background-color: color-mix(in srgb, var(--vuecal-primary-color) 80%, transparent);color: #fff;}
 
-  &.vuecal--has-schedules .vuecal__weekday {padding: 0;}
-  &.vuecal--has-schedules .vuecal__weekday-date {width: 1.5em;}
-  &.vuecal--has-schedules .vuecal__scrollable--day-view .vuecal__schedules-headings {
+  // Always use .vuecal__scrollable for view specific override for Vue transition to be smooth.
+  .vuecal__scrollable--has-schedules .vuecal__weekday {padding: 0;}
+  .vuecal__scrollable--has-schedules .vuecal__weekday-date {width: 1.5em;}
+  .vuecal__scrollable--has-schedules.vuecal__scrollable--day-view .vuecal__schedules-headings {
     position: sticky;
     inset: 0 0 auto;
   }
