--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -174,6 +174,7 @@ ul {
 
 // Shared classes & styles.
 // --------------------------------------------------------
+.ova {overflow: auto;}
 .ovh {overflow: hidden;}
 .todo-tag {
   background: var(--w-error-color);
