Improve UI and logic for events drag-and-drop.

--- a/src/vue-cal/default-theme.scss
+++ b/src/vue-cal/default-theme.scss
@@ -17,8 +17,8 @@
   color: var(--vuecal-base-color);
   height: var(--vuecal-height);
 
-  &.vuecal--dragging-cell {cursor: ns-resize;}
   &.vuecal--dragging-event {cursor: grabbing;}
+  &.vuecal--resizing-event {cursor: ns-resize;}
 
   // Dark theme.
   // ------------------------------------------------------
