--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -6,25 +6,25 @@ h1 {
 }
 
 h2 {
-  font-size: 26px;
+  font-size: 1.9em;
   line-height: 1.1;
-  font-weight: normal;
-  margin-bottom: 30px;
-  padding-bottom: 6px;
+  margin-top: 6rem;
+  margin-bottom: 1.5rem;
+  padding-bottom: 0.3rem;
   color: var(--headline-color);
   border-bottom: 1px solid color-mix(in srgb, var(--w-contrast-bg-color) 12%, transparent);
+  font-weight: normal;
 
-  a {color: inherit;}
+  h1 + & {margin-top: 3rem;}
 }
 
 h3 {
   margin-top: 70px;
   padding: 10px 0 0;
+  font-weight: normal;
 
   a {
     font-size: 24px;
-    font-weight: normal;
-    color: inherit;
 
     .w-icon {
       vertical-align: middle;
@@ -35,12 +35,13 @@ h3 {
 
 h4 {margin: 70px 0 8px;}
 h3 + h4 {margin-top: 20px;}
-h4 a {color: inherit;}
 h5 {
   font-size: 1.1em;
   color: #555;
   margin-top: 0.5em;
 }
+
+h2 a, h3 a, h4 a {color: inherit;}
 
 code, .code {
   font-family: monospace, sans-serif;
