--- a/src/vue-cal/default-theme.scss
+++ b/src/vue-cal/default-theme.scss
@@ -310,6 +310,8 @@
     display: flex;
     z-index: 1;
 
+    &--resizing {z-index: 100;}
+
     &--background {
       border: none;
       border-radius: 0;
@@ -343,6 +345,12 @@
       font-size: 11px;
     }
 
+    &-resizer {
+      // Over border (so there's no risk of triggering the event drag instead).
+      inset: auto -1px -1px;
+      border-bottom-left-radius: inherit;
+      border-bottom-right-radius: inherit;
+    }
     &-delete {
       position: absolute;
       top: -5px;
