--- a/src/vue-cal/default-theme.scss
+++ b/src/vue-cal/default-theme.scss
@@ -261,7 +261,10 @@
 
   .vuecal__cell--out-of-scope .vuecal__cell-date {opacity: 0.4;}
 
-  .vuecal__scrollable--month-view .vuecal__cell-events {overflow: hidden;}
+  .vuecal__scrollable--month-view .vuecal__cell-events {
+    overflow: hidden;
+    flex-grow: 1;
+  }
   &.vuecal--timeless .vuecal__cell-events {
     display: flex;
     width: 100%;
@@ -271,6 +274,12 @@
     align-items: flex-start;
     padding: 4px;
     gap: 4px;
+  }
+  .vuecal__scrollable--no-schedules.vuecal__scrollable--day-view .vuecal__cell-events,
+  .vuecal__scrollable--no-schedules.vuecal__scrollable--days-view .vuecal__cell-events,
+  .vuecal__scrollable--no-schedules.vuecal__scrollable--week-view .vuecal__cell-events {
+    position: absolute;
+    inset: 0 8px 0 0;
   }
 
   // Calendar Body > Time column.
