--- a/src/vue-cal/default-theme.scss
+++ b/src/vue-cal/default-theme.scss
@@ -103,7 +103,6 @@
   // Calendar Weekdays Headers.
   // ------------------------------------------------------
   .vuecal__scrollable-wrap {
-    position: relative;
     background-color: color-mix(in srgb, var(--vuecal-primary-color) 4%, transparent);
     border: 1px solid var(--vuecal-border-color);
     border-top: none;
@@ -459,7 +458,11 @@
       padding: 9px;
       box-shadow: none;
     }
-
+    .vuecal__scrollable--day-view .vuecal__cell {
+      aspect-ratio: initial;
+      border-radius: 0;
+      font-weight: normal;
+    }
     // Always use .vuecal__scrollable for view specific override for Vue transition to be smooth.
     .vuecal__scrollable--years-view .vuecal__cell {padding: 6px;}
     .vuecal__scrollable--month-view .vuecal__cell,
