--- a/src/vue-cal/index.scss
+++ b/src/vue-cal/index.scss
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   user-select: none;
+  z-index: 0; // Default minimal z-index to at least have visible cells :before.
 
   &--date-picker {--vuecal-headings-bar-height: 1.3rem;}
   &--has-schedules {--vuecal-headings-bar-height: 2.4rem;}
