Improve the default date picker UI.

--- a/src/vue-cal/default-theme.scss
+++ b/src/vue-cal/default-theme.scss
@@ -455,7 +455,9 @@
       font-size: 1em;
       box-shadow: none;
     }
-    .vuecal__scrollable--day-view .vuecal__cell {
+    .vuecal__scrollable--day-view .vuecal__cell,
+    .vuecal__scrollable--days-view .vuecal__cell,
+    .vuecal__scrollable--week-view .vuecal__cell {
       aspect-ratio: initial;
       border-radius: 0;
       font-weight: normal;
@@ -469,13 +471,17 @@
     &.vuecal--dark .vuecal__cell--today:before,
     &.vuecal--dark .vuecal__cell--current-month:before,
     &.vuecal--dark .vuecal__cell--current-year:before {background-color: color-mix(in srgb, var(--vuecal-primary-color) 50%, transparent)}
-    &.vuecal--dark .vuecal__cell--selected:before {background-color: var(--vuecal-primary-color);}
+    &.vuecal--dark .vuecal__scrollable--month-view .vuecal__cell--selected:before,
+    &.vuecal--dark .vuecal__scrollable--year-view .vuecal__cell--selected:before,
+    &.vuecal--dark .vuecal__scrollable--years-view .vuecal__cell--selected:before {background-color: var(--vuecal-primary-color);}
   }
 
   &.vuecal--date-picker.vuecal--light {
     .vuecal__cell--today:before,
     .vuecal__cell--current-month:before,
     .vuecal__cell--current-year:before {background-color: color-mix(in srgb, var(--vuecal-primary-color) 12%, transparent);}
-    .vuecal__cell--selected:before {background-color: color-mix(in srgb, var(--vuecal-primary-color) 28%, transparent);}
+    .vuecal--dark .vuecal__scrollable--month-view .vuecal__cell--selected:before,
+    .vuecal--dark .vuecal__scrollable--year-view .vuecal__cell--selected:before,
+    .vuecal--dark .vuecal__scrollable--years-view .vuecal__cell--selected:before {background-color: color-mix(in srgb, var(--vuecal-primary-color) 28%, transparent);}
   }
 }
