--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -220,7 +220,7 @@ ul {
   .w-icon.bolt {
     width: 68px;
     height: 68px;
-    background-color: rgba(#000, 0.05);
+    background-color: color-mix(in srgb, var(--w-contrast-bg-color) 5%, transparent);
     display: flex;
     align-items: center;
     justify-content: center;
