Update the documentation.

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -122,10 +122,7 @@ aside {
   }
 }
 
-.page {
-  position: relative;
-  overflow: auto;
-}
+.page {position: relative;}
 
 main {
   padding-top: 65px; // 40 for the top bar height, + arbitrary 25 for spacing out.
