Start adding the all-day layout.

--- a/src/vue-cal/index.scss
+++ b/src/vue-cal/index.scss
@@ -2,6 +2,7 @@
   --vuecal-grid-columns: 7; // Default value, overridden dynamically on view change.
   --vuecal-grid-rows: 6; // Default value, overridden dynamically on view change.
   --vuecal-headings-bar-height: 1.7rem;
+  --vuecal-all-day-height: 2rem;
   --vuecal-time-cell-height: 50px; // Default value, can be overridden from props.
   // When there are too many day cells to fit in the view, setting a min cell width will help
   // visualizing and a horizontal scrollbar will be added.
