Improve all-day bar layout and add on day view.

--- a/src/vue-cal/default-theme.scss
+++ b/src/vue-cal/default-theme.scss
@@ -281,6 +281,7 @@
     position: absolute;
     inset: 0 8px 0 0;
   }
+  .vuecal__all-day .vuecal__cell-events {width: 100%;inset: 0;}
 
   // Calendar Body > Time column.
   // ------------------------------------------------------
