Improve calendar UI and cleanup.

--- a/src/vue-cal/default-theme.scss
+++ b/src/vue-cal/default-theme.scss
@@ -103,7 +103,7 @@
     font-size: 0.85em;
   }
 
-  // Calendar Weekdays Headers.
+  // Calendar scrollable.
   // ------------------------------------------------------
   .vuecal__scrollable-wrap {
     background-color: color-mix(in srgb, var(--vuecal-primary-color) 4%, transparent);
@@ -121,13 +121,22 @@
       border-top-right-radius: var(--vuecal-border-radius);
     }
   }
+
   .vuecal__scrollable {
     display: grid;
     grid-template-columns: 1fr 0fr;
 
     &--row {grid-template-columns: 0fr 1fr;}
+
+    // Always use .vuecal__scrollable for view specific override for Vue transition to be smooth.
+    &--no-schedules {--vuecal-schedules-bar-height: 0px;}
+    &--day-view {--vuecal-weekday-bar-height: 0px;}
+    &--month-view, &--no-all-day-bar {--vuecal-all-day-bar-height: 0px;}
+    &--year-view, &--years-view {overflow: hidden;} // Useful while transitioning.
   }
 
+  // Calendar Weekdays Headers.
+  // ------------------------------------------------------
   .vuecal__week-number small {
     width: 1.4em;
     display: flex;
@@ -187,27 +196,19 @@
   .vuecal__scrollable--has-schedules .vuecal__weekday {padding: 0;}
   .vuecal__scrollable--has-schedules .vuecal__weekday-date {width: 1.5em;}
 
-  // Calendar Body.
-  // ------------------------------------------------------
-  // Always use .vuecal__scrollable for view specific override for Vue transition to be smooth.
-  .vuecal__scrollable--no-schedules {--vuecal-schedules-bar-height: 0px;}
-  .vuecal__scrollable--day-view {--vuecal-weekday-bar-height: 0px;}
-  .vuecal__scrollable--month-view,
-  .vuecal__scrollable--no-all-day-bar {--vuecal-all-day-bar-height: 0px;}
-
   // Calendar Body > Calendar Cell.
   // ------------------------------------------------------
   .vuecal__cell {
     overflow: hidden;
     box-shadow: 0 0 0 0.5px var(--vuecal-border-color) inset;
   }
-
   // Always use .vuecal__scrollable for view specific override for Vue transition to be smooth.
   &.vuecal--lg .vuecal__scrollable--month-view .vuecal__cell {
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-end;
   }
+
   .vuecal__cell:before {
     content: '';
     position: absolute;
